src/objects/Delegation__c.object
<CustomObject>
    <description>This object is for Audit purpose of all the delegations. Each time a record is submitted for approval to a delegated user, this object records that event.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegateUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_Swapped__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Swapped</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delegations</relationshipLabel>
        <relationshipName>Delegations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Delegate to which record is submitted for approval</description>
        <label>Delegate Rule Reference</label>
        <referenceTo>Delegate__c</referenceTo>
        <relationshipLabel>Delegations Audit</relationshipLabel>
        <relationshipName>Delegations_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegation_Reason__c</fullName>
        <label>Delegation Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DelegatorID__c</fullName>
        <formula>Delegate__r.Delegator__r.pse__Salesforce_User__c</formula>
        <label>Delegator User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegatorUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>It captures the value of the Process, the record is submitted for approval</description>
        <label>Process</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Delegations</relationshipLabel>
        <relationshipName>Delegations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Record__c , &apos;View Record&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <description>ID of the Record Submitted for Approval</description>
        <label>Record</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Delegation</label>
    <listViews>
        <fullName>Geo_Delegation_Administrator_Delegation</fullName>
        <filterScope>Queue</filterScope>
        <label>Geo Delegation Administrator</label>
        <queue>Geo_Delegation_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DLGN-{0000000000}</displayFormat>
        <label>Delegation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>